--- a/plugin/src/main/resources/issues/scan-parameters.properties
+++ b/plugin/src/main/resources/issues/scan-parameters.properties
@@ -4,7 +4,7 @@ title.sourceDirectories=Source Directories
 description.sourceDirectories=Additional paths to the source code if not in the root of the workspace \
   (or outside the workspace).
 title.blameDisabled=Disable retrieval of blame information (author and commit) from SCM
-title.skipPostProcessing=Disable detection of missing package and module names 
+title.skipPostProcessing=Disable post-processing of issues (package and modul names, file paths, fingerprints) 
 title.filter=Issue Filters
 description.filter=Issues will be matched with all the specified filters. If no filter is \
   defined, then all issues will be published. Filters with empty regular expression will be ignored.
