--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>warnings-ng</artifactId>
   <packaging>hpi</packaging>
   <name>Warnings Plugin</name>
-  <version>${revision}${changelist}</version>
+  <version>10.6.0</version>
 
   <description>Collects compiler warnings or issues reported by static analysis
     tools and visualizes the results. It has built-in support for numerous static analysis tools (including several
@@ -618,7 +618,7 @@
     <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v10.5.3</tag>
+    <tag>v10.6.0</tag>
   </scm>
 
   <repositories>
