--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -51,7 +51,7 @@
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
     <prism-api.version>1.29.0-8</prism-api.version>
-    <jenkins.version>2.401.3</jenkins.version>
+    <jenkins.version>2.414.1</jenkins.version>
 
   </properties>
 
@@ -184,7 +184,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>gson-api</artifactId>
-      <version>2.10.1</version>
+      <version>2.10.1-15.v0d99f670e0a_7</version>
     </dependency>
 
     <!-- Optional Jenkins Plug-in Dependencies -->
