--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,6 +25,8 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
+    <jenkins.version>2.426.2</jenkins.version>
+
     <analysis-model-api.version>11.14.0</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
