--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -372,6 +372,12 @@
       <artifactId>parasoft-findings</artifactId>
       <version>10.7.1</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>warnings-ng</artifactId>
+          <groupId>io.jenkins.plugins</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
