--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -41,7 +41,7 @@
     <testcontainers.version>1.19.3</testcontainers.version>
 
     <!-- Jenkins Plug-in Dependencies Versions -->
-    <forensics-api.version>2.4.0-SNAPSHOT</forensics-api.version>
+    <forensics-api.version>2.4.0-rc1560.b_4b_993ec6a_9f</forensics-api.version>
     <git-forensics.version>2.1.0-SNAPSHOT</git-forensics.version>
 
     <jenkins-maven-plugin.version>3.22</jenkins-maven-plugin.version>
