Rewrite reference finder.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>6.17.0</version>
+    <version>7.1.0</version>
     <relativePath />
   </parent>
 
@@ -41,8 +41,8 @@
     <testcontainers.version>1.19.3</testcontainers.version>
 
     <!-- Jenkins Plug-in Dependencies Versions -->
-    <forensics-api.version>2.4.0-rc1560.b_4b_993ec6a_9f</forensics-api.version>
-    <git-forensics.version>2.1.0-20240205.180020-1</git-forensics.version>
+    <forensics-api.version>2.4.0-rc1561.1f746b_248f63</forensics-api.version>
+    <git-forensics.version>2.1.0-20240207.074913-2</git-forensics.version>
 
     <jenkins-maven-plugin.version>3.22</jenkins-maven-plugin.version>
     <job-dsl.version>1.84</job-dsl.version>
